Bug 1509394. Fix pointer events regression for SVG clipPath clipped content. r=longsonr a=jcristau

References to a clipPath that is non-existent or invalid should be ignored,
not cause the referencing element to ignore pointer events.

Differential Revision: https://phabricator.services.mozilla.com/D12959